# openai-realtime-demo

./: Cargo.toml  README.md
src/: main.rs
www/: index.html  index.js
