[package]
name = "openai-realtime-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.7", features = ["ws"]}
axum-server = {version = "0.7.1", features = ["tls-openssl"]}
base64 = "0.22.1"
bytes = "1.8.0"
futures = "0.3.31"
opus = "0.3.0"
serde = "1.0.215"
serde_json = "1.0.132"
tokio = {version = "1.40.0", features = ["macros", "rt-multi-thread"]}
tokio-tungstenite = {version = "0.24.0", features = ["native-tls"]}
tower-http = {version = "0.6.1", features = ["fs"]}
webrtc = "0.11.0"
webrtc-media = "0.8.0"
